feat(backend): PASO 9 N+1 batch Compra/Cotizacion/Promocion (BACK-REND-002/003)
- CompraService: batch toResponses (proveedores/almacenes/formasPago/detalles/productos) 6 fijas
- CotizacionService: batch cliente/detalles/productos 3 fijas
- PromocionService: batch productos/categorias via findByPromocionIdIn (2 queries vs 2*N)
- Repos: add findByCompraIdIn, findByCotizacionIdIn, findByPromocionIdIn

Tests: 549 2 pre-existing fails, 0 regresiones (Compra/Cotizacion/Promocion pass)
Audit: 20/316 done

Co-Authored-By: internal-model